--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@auth0/auth0-react": "^1.12.0",
-    "@next-auth/mongodb-adapter": "^1.1.1",
+    "crypto": "^1.0.1",
     "gatsby": "^4.24.1",
     "gatsby-plugin-image": "^2.24.0",
     "gatsby-plugin-manifest": "^4.24.0",
@@ -16,7 +15,6 @@
     "gatsby-transformer-sharp": "^4.24.0",
     "jquery": "^3.6.1",
     "mongodb": "^4.10.0",
-    "next-auth": "^4.14.0",
     "nodemailer": "^6.8.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
@@ -42,7 +40,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/BitWiz0108/AustinProject.git"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
