--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "anymatch": "^3.1.2",
     "crypto": "^1.0.1",
-    "firebase": "^9.12.1",
+    "firebase": "^8.3.1",
     "gatsby": "^4.24.1",
     "gatsby-plugin-image": "^2.24.0",
     "gatsby-plugin-manifest": "^4.24.0",
@@ -26,7 +27,8 @@
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-owl-carousel": "^2.3.3",
-    "react-router-dom": "^6.4.2"
+    "react-router-dom": "^6.4.2",
+    "web-vitals": "^1.1.0"
   },
   "devDependencies": {
     "prettier": "^2.7.1"
