--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "anymatch": "^3.1.2",
+    "axios": "^1.1.3",
     "crypto": "^1.0.1",
     "firebase": "^8.3.1",
     "gatsby": "^4.24.1",
@@ -28,6 +29,7 @@
     "react-helmet": "^6.1.0",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.4.2",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.0"
   },
   "devDependencies": {
